Refactor stylistics of schema discovery
(cherry picked from commit 447edca065517be1c62f64dd2575c899efeff5ea)